objects/VoiceCall_Home__dll.object
<CustomObject>
    <fields>
        <fullName>ActivityId__c</fullName>
        <label>Activity ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallAcceptDateTime__c</fullName>
        <label>Call Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallCenterId__c</fullName>
        <label>Call Center ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallConnectDateTime__c</fullName>
        <label>Call Connected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallDisposition__c</fullName>
        <label>Call Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDurationInSeconds__c</fullName>
        <label>Call Duration</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallEndDateTime__c</fullName>
        <label>Call Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallOrigin__c</fullName>
        <label>Call Origin</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallQueuedDateTime__c</fullName>
        <label>Call Entered Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallRecordingId__c</fullName>
        <label>Voice Call Recording ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallResolution__c</fullName>
        <label>Call Resolution</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallStartDateTime__c</fullName>
        <label>Call Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallSubtype__c</fullName>
        <label>Call Subtype</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <label>Call Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerIdType__c</fullName>
        <label>Caller Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerId__c</fullName>
        <label>Caller ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConferenceKey__c</fullName>
        <label>Conference Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversationId__c</fullName>
        <label>Conversation ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerHoldDuration__c</fullName>
        <label>Customer Hold Duration</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisconnectReason__c</fullName>
        <label>Disconnect Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserId__c</fullName>
        <label>Messaging User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromPhoneNumber__c</fullName>
        <label>Caller Contact Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Voice Call ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <label>Deleted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRecorded__c</fullName>
        <label>Is Call Recorded</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <label>Last Modified By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LongestHoldDuration__c</fullName>
        <label>Longest Hold Duration</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MediaProviderId__c</fullName>
        <label>CallCoachingMediaProvider ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextCallId__c</fullName>
        <label>Next Call ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfHolds__c</fullName>
        <label>Number Of Holds</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousCallId__c</fullName>
        <label>Previous Call ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QualityScore__c</fullName>
        <label>Mean Opinion Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <label>Queue Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientId__c</fullName>
        <label>Recipient ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedRecordId__c</fullName>
        <label>RelatedRecord ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <label>Source Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToPhoneNumber__c</fullName>
        <label>Recipient Contact Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorCallKey__c</fullName>
        <label>Vendor Call Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorParentCallKey__c</fullName>
        <label>Vendor Parent Call Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorType__c</fullName>
        <label>Vendor Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_PartitionDate__c</fullName>
        <label>cdp_sys_PartitionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>